k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblio-backend
  labels:
    app: biblio-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: biblio-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biblio-backend
  template:
    metadata:
      labels:
        app: biblio-backend
    spec:
      containers:
      - name: backend
        # Note: En production, utilisez une image taggée sur Docker Hub ou votre propre registry
        image: abdos/biblio-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
