k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblio-frontend
  labels:
    app: biblio-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: biblio-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biblio-frontend
  template:
    metadata:
      labels:
        app: biblio-frontend
    spec:
      containers:
      - name: frontend
        # Note: En production, utilisez une image taggée sur Docker Hub ou votre propre registry
        image: abdos/biblio-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
